# pymer

./: .coveragerc  .gitattributes  .gitignore  .travis.yml  LICENSE  Makefile  README.rst  circle.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
doc/: Makefile  conf.py  index.rst
pymer/: __init__.py  _cms.pyx  _hash.pyx  _version.py  base.py  count.py  markov.py  tests.py
src/pymer/: __init__.py  _hash.pyx  base.py  markov.py
src/pymer/util/: benchmark.py
tests/: test_basic.py
util/: benchmark.py
